# RTES-trackingCar

./: CMakeLists.txt  README.md
arduino_code/: arduino_code.ino  prova_serial2.0.ino
lib/: camera.h  carTraker.h  car_traker.h  control_system.h  detection.h
src/: camera.cpp  carTraker.cpp  car_traker.cpp  control_system.cpp  detection.cpp  main.cpp
